fix: - Adjusting the Posts component to a better vision for medias - Solving bug of TopicsOfMoment to have a overflow-y

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -56,21 +56,20 @@
   top: 0;
 }
 
+
 .swiper-button-next,
 .swiper-button-prev {
   background-color: #ADDCFF;
-  /* background-color: rgba(255, 255, 255, 0.5); */
   right: 0px;
-  padding: 25px;
+  padding: 22px;
   color: #008BF5 !important;
   fill: #008BF5  !important;
   border-radius: 50% !important;
   border: solid #008BF5;
 }
-
 .swiper-button-next::after,
 .swiper-button-prev::after {
-  font-size: 25px !important; 
+font-size: 22px !important; 
 }
 
 
